use case verifications. Fixed layout issue on result page

--- a/www/sass/screen.scss
+++ b/www/sass/screen.scss
@@ -256,9 +256,26 @@ select{
             }
         }
         
-        .results{
+        .results-view{
+            height: 100%;
+
             header{
                 margin-top: 30px;
+                font-family: "Source Sans Pro","source-sans-pro","HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif!important;
+                padding: 0 10%;
+                font-size: 20px;
+                margin-bottom: 20px;
+                opacity: 1;
+                transition: opacity  height margin-bottom margin-top .25s ease-in-out;
+                -moz-transition: opacity  height margin-bottom margin-top .25s ease-in-out;
+                -webkit-transition: opacity  height margin-bottom margin-top .25s ease-in-out;
+                
+                &.reduced{
+                     opacity: 0.3;
+                     height: 28px;
+                     margin-bottom: 0px;
+                     margin-top: 0px; 
+                }
             }
             .total-results{
                 margin-top: 30px;
@@ -269,9 +286,8 @@ select{
             }
             #graphics{
                 overflow-y: scroll;
-                height: 382px;
-                
-                //border: 1px solid white;
+                height: 100%;
+                padding-bottom: 100px;
                 
                 .msg{
                     padding-left: 10%;
